--- a/main.css
+++ b/main.css
@@ -17,15 +17,14 @@ div#wrapper {
 	width: 100%;
 	min-width: 1000px;
 	height: 100%;
-	min-height: 610px;
+	min-height: 710px;
 	/* border : 2px solid gray; */
 	overflow: hidden;
 }
 
 div#header {
-	height: 42px;
+	height: 40px;
 	min-width: 1000px;
-	padding: 0px 10px 0px 10px;
 	background-color: #EDEDED;
 }
 
@@ -34,13 +33,14 @@ div#header * {
 }
 
 div#header>h1 {
-	margin-top: 10px;
+	margin-top: 9px;
+	margin-left: 10px;
 	font-size: 20px;
 	font-weight: 900;
 }
 
 div#header>p {
-	margin-top: 14px;
+	margin-top: 13px;
 	margin-left: 5px;
 	font-size: 13px;
 	font-weight: 900;
@@ -49,8 +49,8 @@ div#header>p {
 
 div#header>#login {
 	float: right;
-	margin-top: 6px;
-	margin-right: 2px;
+	margin-top: 5px;
+	margin-right: 10px;
 }
 
 div#container {
@@ -59,7 +59,7 @@ div#container {
 
 div#categories {
 	width: 100%;
-	height : 40px;
+	height: 30px;
 	text-align: center;
 }
 
@@ -67,7 +67,7 @@ div#categories>ul {
 	/* 그냥 inline은 margin을 줘도 안 먹어서 inline-block으로 작업 */
 	/* inline-block의 영역이 좀 더 넓은 것 같은데... 차이는 잘 모르겠다 */
 	display: inline-block;
-	margin-top: 15px;
+	margin-top: 10px;
 }
 
 div#categories li {
@@ -83,30 +83,37 @@ div#categories .ctgry_li {
 div#categories a {
 	text-align: center;
 	color: #333333;
-	font-size: 14px;
+	font-size: 12px;
 	font-weight: 900;
 }
 
-div#contents {
+div#panels {
 	/* 좌우 panel을 보여주기 위해 폭을 넓게 잡았다 */
 	position: absolute;
 	top: 50%;
+	left: -100%;
 	width: 500%;
-	height: 440px;
-	margin-left: -100%;
-	margin-top: -220px;
+	height: 560px;
+	margin-top: -280px;
 }
 
-div#contents>.panel {
+div#panels>.panelWrapper {
 	position: absolute;
 	left: 20%;
 	width: 20%;
-	height: 440px;
+	height: 560px;
 	background: url(./img/bg_panel.png) 50% 0 no-repeat;
 }
 
+div.panelWrapper>.panel {
+	position: relative;
+	width: 900px;
+	height: 540px;
+	margin: 0 auto;
+}
+
 div#left {
-	margin-left: -1000px;
+	margin-left: -1000px;	
 }
 
 div#center {
@@ -117,30 +124,55 @@ div#right {
 	margin-left: 1000px;
 }
 
-div.panel>.in_panel {
-	/* border: 1px solid red; */
-	margin-top: 21px;
-	margin-left: auto;
-	margin-right: auto;
+div.panel>.panelContents {
+	position: absolute;
+	left: 50%;
+	margin-left: -420px;
+	top: 50%;
+	margin-top: -250px;
 	width: 840px;
-	height: 380px;
+	height: 500px;
 }
 
-div#panel_button * {
+div.panel h3 {
+	padding-bottom: 10px;
+	border-bottom: 3px solid #AAAAAA;
+}
+
+div.panel iframe {
+	/* border: 1px solid red; */
+	position: absolute;
+	width: 840px;
+	height: 380px;
+	bottom: 25px;
+}
+
+div#panelButton * {
 	position: absolute;
 	top: 50%;
 	opacity: 0.8;
-	margin-top: -20px;
+	margin-top: -40px;
+	width: 40px;
+	height: 60px;
+	z-index: 20;
 }
 
-div#panel_button #to_left {
+div#panelButton p {
+	display: none;
+}
+
+div#panelButton #toLeft {
 	left: 50%;
-	margin-left: -497px;
+	margin-left: -500px;
+	background: url(./img/to_left.png) 0 no-repeat;
+	background-position: center;
 }
 
-div#panel_button #to_right {
+div#panelButton #toRight {
 	right: 50%;
-	margin-right: -475px;
+	margin-right: -500px;
+	background: url(./img/to_right.png) 0 no-repeat;
+	background-position: center;
 }
 
 div#footer {
@@ -185,8 +217,7 @@ a {
 	border: 1px solid #0077FF;
 	background-color: #0077FF;
 	-webkit-border-radius: 3px;
-	padding: 7px 10px;
-	float: right;
+	padding: 7px 6px;
 	text-decoration: none;
 	font-size: 12px;
 	font-weight: 600;
