--- a/style/main.css
+++ b/style/main.css
@@ -102,7 +102,7 @@ div#panels>.panelWrapper {
 	left: 20%;
 	width: 20%;
 	height: 560px;
-	background: url(./img/bg_panel.png) 50% 0 no-repeat;
+	background: url(../img/bg_panel.png) 50% 0 no-repeat;
 }
 
 div.panelWrapper>.panel {
@@ -164,14 +164,14 @@ div#panelButton p {
 div#panelButton #toLeft {
 	left: 50%;
 	margin-left: -500px;
-	background: url(./img/to_left.png) 0 no-repeat;
+	background: url(../img/to_left.png) 0 no-repeat;
 	background-position: center;
 }
 
 div#panelButton #toRight {
 	right: 50%;
 	margin-right: -500px;
-	background: url(./img/to_right.png) 0 no-repeat;
+	background: url(../img/to_right.png) 0 no-repeat;
 	background-position: center;
 }
 
